--- a/views/all_lecturers.pug
+++ b/views/all_lecturers.pug
@@ -11,13 +11,17 @@ block content
                 th(scope='col') ID
                 th(scope='col') Name
                 th(scope='col') email
+                th(scope='col') password
+                th(scope='col') faculty
                 th(scope='col') remove
             tbody
                 each val in lecturers
-                    tr(id=`row-${val.id}`) 
-                        th(scope='row') #{val.id}
+                    tr(id=`row-${val.lecturer_id}`) 
+                        th(scope='row') #{val.lecturer_id}
                         td #{val.name}
                         td #{val.email}
+                        td #{val.password}
+                        td #{val.faculty}
                         td 
-                            button.btn.btn-sm.btn-outline-secondary(onclick=`removeUser(${val.id}, 'lecturer')`)
-                                i.bi.bi-trash-fill(onclick=`removeUser(${val.id}, 'lecturer')`)
+                            button.btn.btn-sm.btn-outline-secondary(onclick=`removeUser(${val.lecturer_id}, 'lecturer')`)
+                                i.bi.bi-trash-fill(onclick=`removeUser(${val.lecturer_id}, 'lecturer')`)
