user view back_btn component for back button

--- a/views/lecturer.pug
+++ b/views/lecturer.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  include includes/back_btn.pug
   h1.my-3.text-center.display-5 Choose a Lecturer
   div.container-scroll.text-center  
     each val in lecturers
